# py-manage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_dry_publish.yaml  lint_format_check.yaml  monorepo_build_docker.yaml  monorepo_build_dry_publish.yaml  monorepo_lint_format_check.yaml  monorepo_package_build.yaml  monorepo_tests_static_typing.yaml  standard_build_docker.yaml  standard_build_dry_publish.yaml  standard_code_check.yaml  standard_package_build.yaml  tests_static_typing.yaml
monorepo/: README.md  pyproject.toml
monorepo/services/service_a/: README.md  main.py  pyproject.toml
monorepo/services/service_b/: Dockerfile  pyproject.toml
monorepo/workbench/: Dockerfile
services/service_a/: pyproject.toml
services/service_a/src/: models.py
services/service_a/tests/: test_app.py
services/service_b/: README.md  pyproject.toml
services/service_b/src/: models.py
services/service_b/tests/: test_app.py
standard/: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
standard/src/: models.py
standard/src/package_a/: module_x.py
standard/src/package_b/: module_y.py
standard/tests/: test_main.py
standard/tests/package_a/: test_module_x.py
standard/tests/package_b/: test_module_y.py
standard/workbench/: Dockerfile  pyproject.toml
