[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = "A monorepo project."
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
