[tool.poetry]
name = "standard"
version = "0.1.0"
description = "A standard project."
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "package_a", from = "src", to = "standard" },
    { include = "package_b", from = "src", to = "standard" }
]

[tool.poetry.dependencies]
python = "~3.12.3"
fastapi = "0.111.0"
pydantic = "2.7.4"
uvicorn = "0.30.1"

[tool.poetry.group.dev.dependencies]
httpx = "0.27.0"
mypy = "1.10.0"
ruff = "0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
