[project]
name = "standard"
version = "0.1.0"
description = "A standard project."
license = "MIT"
authors = [
    { name = "Martynas Subonis", email = "martynas.subonis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.3",
    "uvicorn==0.32.1"
]

[dependency-groups]
dev = [
    "httpx==0.28.0",
    "mypy==1.13.0",
    "ruff==0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/package_a" = "standard/package_a"
"src/package_b" = "standard/package_b"

[tool.mypy]
strict = true
