[tool.poetry]
name = "service-b"
version = "0.1.0"
description = "Service \"b\" project."
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.3"
fastapi = "0.111.0"
uvicorn = "0.30.1"

[tool.poetry.group.dev.dependencies]
httpx = "0.27.0"
mypy = "1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
