[tool.poetry]
name = "workbench"
version = "0.1.0"
description = "GPU-Accelerated Workbench project."
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
