[project]
name = "service-a"
version = "0.1.0"
description = "Service \"a\" project."
license = "MIT"
authors = [
    { name = "Martynas Subonis", email = "martynas.subonis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.3",
    "uvicorn==0.32.1"
]

[dependency-groups]
dev = [
    "httpx==0.28.0",
    "mypy==1.13.0",
]

[tool.mypy]
strict = true
